@@ -1,3 +1,11 @@
+2007-02-28  Alexander Larsson  <alexl@redhat.com>
+
+	* Makefile.am:
+	Handle xdg-user-dir as script, not program.
+	
+	* xdg-user-dirs-update.c:
+	Fix warnings
+
 === xdg-user-dirs 0.1 ===
 
 2007-02-28  Alexander Larsson  <alexl@redhat.com>
